skins/Citizen/resources/skins.citizen.styles/common/templates.less
.infobox {
    background: var(--color-surface-2);
    border: 2px dashed var(--border-color-base);
    padding: 0.5em;
    border-top: 5px solid var(--color-primary);
    float: right;
    clear: right;
    margin-left: 1em;
    margin-bottom: 0.5em;
    min-width: 28em;
    max-width: 32em;
    font-size: smaller;

    .title, .infobox-above {
        background: var(--color-primary);
        font-size: large;
        color: var(--color-base--emphasized);
        text-shadow: 0 0 5px #C8C8C8;
    }

    .subtitle, .infobox-header {
        background: var(--color-primary);
        color: var(--color-base--emphasized);
        text-shadow: 0 0 5px #C8C8C8;
    }

    .infobox-title {
        font-size: large;
        color: var(--color-base--emphasized);
        text-shadow: 0 0 5px #C8C8C8;
    }

    .infobox-subheader {
        text-align: center;
        background: var(--color-surface-3);
    }

    .infobox-full-data {
        text-align: center;
    }

    p {
        margin: 0;
    }

    ul {
        margin-top: 0.5em;
        margin-bottom: 0.5em;
        margin-left: 1.5em;
    }

    .image, .infobox-image {
        text-align: center;
        border-bottom: 1px solid var(--border-color-base);
    }

    .infobox-label {
        background: var(--color-surface-3);
        border-right: 2px solid var(--color-primary);
    }

    .infobox-below {
        text-align: center;
        background: var(--color-surface-3);
    }
}

.notif {
    text-align: center;
    background: #7c7c7c;
    color: var(--color-base--emphasized);
    padding: 0.5em;
    margin-bottom: 0.5em;
    border: 2px dashed #bdbdbd;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1em' height='1em' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' fill-opacity='0.35' d='M4 19v-2h2v-7q0-2.075 1.25-3.687T10.5 4.2v-.7q0-.625.438-1.062T12 2t1.063.438T13.5 3.5v.7q2 .5 3.25 2.113T18 10v7h2v2zm8 3q-.825 0-1.412-.587T10 20h4q0 .825-.587 1.413T12 22'/%3E%3C/svg%3E");
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
    pointer-events: none;
    user-select: none;
}

.notif-warning {
    text-align: center;
    background: #aa3325;
    color: var(--color-base--emphasized);
    padding: 0.5em;
    margin-bottom: 0.5em;
    border: 2px dashed #ff5d4b;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1em' height='1em' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' fill-opacity='0.35' d='M2.725 21q-.275 0-.5-.137t-.35-.363t-.137-.488t.137-.512l9.25-16q.15-.25.388-.375T12 3t.488.125t.387.375l9.25 16q.15.25.138.513t-.138.487t-.35.363t-.5.137zM12 18q.425 0 .713-.288T13 17t-.288-.712T12 16t-.712.288T11 17t.288.713T12 18m0-3q.425 0 .713-.288T13 14v-3q0-.425-.288-.712T12 10t-.712.288T11 11v3q0 .425.288.713T12 15'/%3E%3C/svg%3E");
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
    pointer-events: none;
    user-select: none;
}

.notif-header {
    font-size: large;
}

.notif-subheader {
    font-style: italic;
    font-size: smaller;
}

